mobile-nav add bgcolor, mobile-nav-menu gap between resize,main page slider mobile fixed

--- a/style/common.css
+++ b/style/common.css
@@ -28,6 +28,8 @@
 
 
     --theme-pop: #af1414;
+    --theme-dark-bg: #302c2c; 
+    /* 偏紅 */
 }
 
 html {
@@ -42,12 +44,13 @@ body {
     background-color: var(--default-theme-main);
 }
 
-
+/* === Lightbox,Popup control   */
 .noscroll {
     /* position: fixed; */
     width: 100%;
     overflow: hidden
 }
+
 /* ===== */
 /* COMP card */
 .card {
@@ -103,7 +106,7 @@ body {
 .card-title h4 {
     color: #d9d9d9;
     font-size: 1.6rem;
-    
+
     line-height: 2.4rem;
     font-weight: 300;
     letter-spacing: .3rem;
@@ -201,7 +204,8 @@ body {
 .header-nav-logo:hover {
     transform: rotate(-5deg) scale(1.2, 1.2);
 }
-.header-nav-logo:hover img{
+
+.header-nav-logo:hover img {
     filter: drop-shadow(0px 3px 13px #18161683);
 }
 
@@ -230,6 +234,7 @@ li.header-nav-link {
 li.header-nav-link a {
     font-size: 16px;
     letter-spacing: 1px;
+
     line-height: 30px;
 
     color: var(--focus-title-sub-dark);
@@ -251,7 +256,7 @@ li.header-nav-link:hover a {
     display: none;
 
     background-color: #6863639f;
-    background: rgba(42, 42, 42, 0.55);
+    background: rgba(42, 42, 42, 0.822);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(7.8px);
@@ -265,7 +270,7 @@ li.header-nav-link:hover a {
     width: 100%;
     flex-wrap: wrap;
     align-content: center;
-    row-gap: 40px;
+    /* row-gap: 10px; */
     height: 100%;
 }
 
@@ -277,14 +282,36 @@ li.header-nav-link:hover a {
     width: 100%;
     height: fit-content;
 }
-.header-navLinks-wrapper-mobile ul li a{
+
+.header-navLinks-wrapper-mobile ul li a {
     width: 100%;
     display: inline-block;
-    background-color: #242424a9;
-    padding: 10px;
-    margin:0;
+    /* background-color: #242424a9; */
+    padding: 12px 0;
+    margin: 0;
+    /* border-bottom: 1px solid rgba(145, 145, 145, 0.395); */
+    border-top: 1px solid rgb(145, 145, 145, 0.395);
+}
 
-} 
+.header-navLinks-wrapper-mobile ul li:last-child a {
+    border-bottom: 1px solid rgb(145, 145, 145, 0.395);
+}
+
+.mobile-nav-panel-close {
+    /* background-color: #fff; */
+    width: 100%;
+    padding: 21px 0;
+
+}
+
+.mobile-nav-panel-close span {
+    margin: 0 20px;
+    float: right;
+    cursor: pointer;
+}
+
+
+
 .header-nav-mobile-active {
     top: -10px;
     display: block;
@@ -335,7 +362,7 @@ li.header-nav-link:hover a {
 /* ========== */
 /* footer */
 .section-footer {
-    background-color: #242424;
+    background-color: var(--theme-dark-bg);
     /* height: 375px; */
     padding-bottom: 50px;
     padding-top: 50px;
@@ -719,7 +746,8 @@ li.header-nav-link:hover a {
 
         color: var(--focus-title-sub-dark);
     }
-    .section-banner-title h2{
+
+    .section-banner-title h2 {
         font-size: 2.4rem;
     }
 }
@@ -734,6 +762,20 @@ li.header-nav-link:hover a {
         top: 0;
         left: 0;
         z-index: 4;
+
+        height: 60px;
+        margin-bottom: 15px;
+        background-color: #45454500;
+        transition: .2s;
+
+    }
+
+    .header-nav-mobile-active {
+        background: var(--theme-dark-bg);
+        -webkit-box-shadow: 0px 3px 10px 0px rgba(26, 26, 26, 0.75);
+        -moz-box-shadow: 0px 3px 10px 0px rgba(26, 26, 26, 0.75);
+        box-shadow: 0px 3px 10px 0px rgba(26, 26, 26, 0.75);
+
     }
 
     .container {
@@ -757,7 +799,8 @@ li.header-nav-link:hover a {
         padding: 5px;
 
     }
-    .header-nav-logo img{
+
+    .header-nav-logo img {
         /* height: unset; */
         object-fit: scale-down;
     }
